更新ID获取方法

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@ bangumi/spiders/bangumi_music_id.py
 !/bangumi/spiders/bangumi_book_id.py
 !/bangumi/spiders/bangumi_music_id.py
 /list.txt
+SpiderKeeper.db
